--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,22 @@
 body {
   margin: 0px;
-  background-image: url(./Img/FoggyForest.jpg);
+  background-image: url(./Img/OvercastDay.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   transition: 1s;
   transition-timing-function: ease-in-out;
   height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  transition: 0.5s;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 80px min(50px, calc(20vw - 80px));
+  padding: 80px min(80px, calc(25vw - 90px));
 }
 
 .searchBarCon {
@@ -27,12 +30,16 @@ body {
   font-weight: 700;
   text-align: center;
   color: white;
-  background-color: #00000051;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border: solid rgb(121, 120, 120) 3px;
+  background-color: #00000026;
+  border: none;
+  border-bottom: solid rgb(255, 255, 255) 3px;
   border-right: none;
   transition: 0.5s;
+  padding-top: 2px;
+}
+
+.searchBarInput {
+  outline: none;
 }
 
 .searchBarInput:hover {
@@ -40,16 +47,16 @@ body {
 }
 
 .searchBarBtn {
-  height: 36.8px;
-  width: 100px;
+  height: 35.4px;
+  width: 30px;
   font-size: 20px;
   font-weight: 700;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  background-color: rgb(102, 102, 102);
-  border: solid rgb(121, 120, 120) 3px;
+  background-color: #00000026;
+  border: none;
+  border-bottom: solid 3px rgb(255, 255, 255);
   color: white;
   transition: 0.5s;
+  padding: 3.5px 0px 0px 0px;
 }
 
 .searchBarBtn:hover {
@@ -69,6 +76,7 @@ body {
   position: fixed;
   background-color: white;
   transition: 1s;
+  transition-timing-function: ease-out;
   top: 0;
   left: 0;
 }
@@ -83,3 +91,87 @@ body {
   width: 40px;
   transition: 1s;
 }
+
+/* Info con*/
+
+.infoCon {
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.topInfoCon {
+  width: 400px;
+  border-bottom: 4px white solid;
+  display: grid;
+  grid-template-columns: 10px 1fr;
+  grid-template-rows: auto 40px 40px;
+  grid-template-areas:
+    "Header Header"
+    "Time Time"
+    "Country Country";
+  align-items: center;
+}
+
+.infoLocation {
+  grid-area: Header;
+  font-size: 50px;
+  font-weight: 700;
+}
+
+.infoCountry {
+  grid-area: Country;
+  font-size: 20px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+
+.infoTime {
+  grid-area: Time;
+  font-size: 20px;
+  font-weight: 700;
+  padding-top: 10px;
+}
+
+.bottomInfoCon {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.infoSideLeft {
+  display: flex;
+  flex-direction: column;
+}
+
+.infoSideRight {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.InfoConMediumText {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.tempNum {
+  font-size: 100px;
+  font-weight: 900;
+}
+
+.windsCon {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.windArrow {
+  height: 30px;
+  padding-bottom: 0px;
+  font-size: 25px;
+  font-weight: 400;
+}
+
+/* Info con End*/
